# phoebudget-server

./: .gitignore  API_DOCS.md  Cargo.toml  DEPLOY.md  Dockerfile  docker-compose.prod.yml  docker-compose.yml  login.json  setup.sh
.sqlx/: query-00be76ee6a68aac1f93c194306e7a488613f57adab3caf0a02170b36dd8be463.json  query-01268e6d61900c0d6028f58152f99727cf522af4b85f74ff34dd4c98eaee9ea3.json  query-02a71ff7c7135cbfe132a541bf4079baf9cedf55c746dd99f3fd562b91d1a482.json  query-04280d504d246b7838bba0a41e424d6124653c327aa3469ece2a8e274e2391a9.json  query-06cc593ced34eae7d624ebdc5580b77620cf318679ac9bf123983628f8dee6e8.json  query-06ff874e70da38a008f719e4da5b5d5ea11719616a9060d834a95347c7c06e83.json  query-080dd6744a5618c18866ee1221bcdc25070cd007d888a0773fb9307b88c26623.json  query-0df82dfd8eacc5a1e0f16314dda5990194a5f24861c98b93edc552ea5aaa090e.json  query-0e148706ecda9371667c6cbdee1ae55bc5af50e3b1934de1c83c1d13eade8ab0.json  query-0fc55434ebecbacecf50faee8d2ab982419a8020349282cabeffc08832d49661.json  query-1629c8cd1e63540a48948a652e5dde605ceda2e4c70c98d070a021811002c221.json  query-1bc67eec9778dd9965c889977a331c8112d419655820a03ec2d4a02f37c784f9.json  query-1c2a733e250ff62cc549bc8a51610aa215477f76647da6e8222c6fb32a1476fe.json  query-1d8d1e3aece47da97b05cbe9663c41d40776084d9b4d5f496aa8e0e6123a1919.json  query-277c75ff6e102dfe091965121ea953fb38d4c1754b8682b09b92dfbc36bc336d.json  query-284980a8328bd4936672f03b3587cd109177ffb001453dfb096c1fd0fcaa680a.json  query-2ca08fae10b2f914216bbf1dcf87e9073d4ac2aada923554c1d44b7909313696.json  (+65 more)
migrations/: 20241221000000_init.sql  (+13 more)
(+14 files in other folders)
