[package]
name = "phoebudget"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls", 
    "postgres", 
    "uuid", 
    "chrono", 
    "rust_decimal" 
] }
dotenvy = "0.15.7"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
rust_decimal = "1.36"

argon2 = "0.5.3"
bytes = "1.0"
http-body-util = "0.1"
jsonwebtoken = { version = "10.2.0", features = ["default", "hmac", "rust_crypto", "sha2"] }
axum-extra = { version = "0.12.2", features = ["typed-header", "with-rejection"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.89"
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"

[dev-dependencies]
rust_decimal_macros = "1.36"
